<resources>
    <string name="app_name">Meet&amp;Share</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_main">Map</string>
    <string name="title_activity_login">Accede</string>

    <!-- Strings related to Login -->
    <string name="LoginTitle">Iniciar Sesión</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Contraseña</string>
    <string name="prompt_password_confirmation">Repita la contraseña</string>

    <string name="action_sign_in">Accede</string>
    <string name="action_register">Registrate</string>
    <string name="error_invalid_email">Direccion de email invalida</string>
    <string name="error_invalid_password">La contraseña es demasiado corta</string>
    <string name="error_incorrect_password">La contraseña es incorrecta</string>
    <string name="error_field_required">El campo es requerido</string>
    <string name="permission_rationale">"Es necesario el permiso de contactos para la direccion de correo electronico"
    </string>
    <string name="action_info_app">Información</string>


    <!-- Strings related to Registro -->
    <string name="RegistroTitle">Registrarse</string>
    <string name="title_activity_registro">Registro</string>
    <string name="title_activity_menu_lateral_actividad">MenuLateralActividad</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="action_settings">Modificar perfil</string>
    <string name="action_save">Guardar Cambios</string>

    <string name="title_activity_menu_lateral">MenuLateralActivity</string>
    <string name="descripcionUsuarioMsg">Cuéntanos más sobre ti...</string>

    <!-- Strings related to Ver Perfil -->
    <string name="PerfilTitle">Perfil</string>
    <string name="baja_usuario">Darse de baja</string>


    <!-- Strings related to Crear Actividad -->

    <!-- Strings related to Ver Actividad -->
    <string name="VerActividadTitle">Ver Actividad</string>
    <string name="descripcionActividadMsg">¿De qué va la actividad?</string>

    <!-- Strings related to Modificar Actividad -->
    <string name="ModificarActividadTitle">Modificar Actividad</string>


    <!--String related to Cerrar Sesión -->
    <string name="cerrar_sesion">Cerrar Sesión</string>

    <!-- Usuario -->
    <string name="nombre">Nombre</string>
    <string name="apellidos">Apellidos</string>
    <string name="fechaNacimiento">Fecha de Nacimiento</string>
    <string name="intereses">Intereses</string>
    <string name="descripcion">Descripción</string>

    <string name="formato_fecha">dd/mm/yyyy</string>
    <string name="formato_hora">hh:mm</string>

    <!-- Botones -->
    <string name="aceptar">Aceptar</string>
    <string name="cancelar">Cancelar</string>
    <string name="selecciona">Selecciona categorías</string>
    <string name="clear_all">Quitar Selección</string>

    <!-- Actividad -->
    <string name="fechaInicio">Fecha de Inicio</string>
    <string name="horaInicio">Hora de Inicio</string>
    <string name="fechaFin">Fecha de Fin</string>
    <string name="horaFin">Hora de Fin</string>
    <string name="ubicacion">Ubicación</string>
    <string name="max_num_participantes">Número máximo de Participantes</string>
    <string name="administrador">Administrador</string>
    <string name="estado">Estado</string>
    <string name="usuarios_inscritos">Usuarios Inscritos</string>
    <string name="plazas_libres">Plazas libres</string>

    <!-- Botones -->
    <string name="crear_actividad">Crear Actividad</string>
    <string name="seleccionar_ubicacion">Seleccionar Ubicacion</string>
    <string name="ver_ubicacion">Ver Ubicacion</string>
    <string name="ver_usuarios_inscritos">Ver Usuarios Inscritos</string>
    <string name="inscribirse">Inscribirse</string>
    <string name="ver_actividad">Ver Actividad</string>
    <string name="eliminar_actividad">Eliminar Actividad</string>
    <string name="activar_actividad">Activar Actividad</string>

    <!-- Menu -->
    <string name="perfil">Perfil</string>
    <string name="inicio">Inicio</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_info_application">InfoApplication</string>


    <!-- Mapa -->
    <string name="radio">Radio de búsqueda (Km)</string>
    <string name="LeyendaMapaTitle">Color de las actividades</string>
    <string name="actAdminColor">Eres el administrador</string>
    <string name="actUsuarioInscritoColor">Estás inscrito</string>
    <string name="actInicioInminenteColor">Queda menos de un día para su inicio</string>
    <string name="actOtrosUsuariosColor">De otros usuarios</string>

    <!-- Marker -->
    <string name="textInfoMarker">Click para ver categorías, click y mantén pulsado para más detalles</string>


    <!-- Confirmacion -->
    <string name="titulo">¿Estás seguro?</string>
    <string name="cuerpo">¿Seguro que desea borrar la siguiente actividad?</string>
    <string name="borradoConfirm">La actividad ha sido borrada </string>
    <string name="Si">Si</string>
    <string name="No">No</string>



</resources>




