<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    tools:context=".actividades.RegistroActivity">


    <TextView
        android:id="@+id/titulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:fontFamily="cursive"
        android:text="@string/app_name"
        android:textAllCaps="false"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textSize="@android:dimen/app_icon_size"
        android:textStyle="bold|italic"
        android:typeface="normal" />

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginLeft="8dp"
        android:layout_gravity="center"
        android:layout_marginRight="8dp"

        >

        <LinearLayout
            android:id="@+id/registro_login_form"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <!-- NOMBRE-->


            <TextView
                android:id="@+id/NombreLabel"
                style="@style/CodeFont"
                android:text="@string/nombre"
                android:textSize="24sp" />


                <AutoCompleteTextView
                    android:id="@+id/nombreRegistro"
                    style="@style/CodeFont"
                    android:inputType="textAutoComplete"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:hint="@string/nombre"

                    />





            <!-- FECHA NACIMIENTO-->
            <TextView
                android:id="@+id/FechaLabel"
                style="@style/CodeFont"

                android:layout_marginBottom="20dp"
                android:text="@string/fechaNacimiento"
                android:textSize="24sp" />

            <android.support.constraint.ConstraintLayout

                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <EditText
                    android:id="@+id/et_mostrar_fecha_picker"
                    style="@style/CodeFont"
                    android:ems="10"
                    android:hint="@string/formato_fecha"
                    android:inputType="date"
                    app:layout_constraintLeft_toLeftOf="parent" />


                <ImageButton
                    android:id="@+id/ib_obtener_fecha"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_date_range_black_24dp"
                    android:layout_marginRight="8dp"
                    app:layout_constraintLeft_toRightOf="@+id/et_mostrar_fecha_picker"
                    android:layout_marginLeft="8dp"
                    app:layout_constraintHorizontal_bias="0.505"
                    android:layout_marginTop="32dp"
                    tools:ignore="ContentDescription"
                    android:backgroundTint="@color/colorPrimary"
                    />



            </android.support.constraint.ConstraintLayout>


            <!-- EMAIL-->


            <TextView
                android:id="@+id/EmailLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/prompt_email"
                android:textColor="@color/black"
                android:textSize="24sp" />


                <AutoCompleteTextView
                    android:id="@+id/emailRegistro"
                    style="@style/CodeFont"
                    android:inputType="textEmailAddress"
                    android:hint="@string/prompt_email"

                    android:maxLines="1"
                    android:singleLine="true"
                    android:ems="10"

                    />



            <!-- PASSWORD-->

            <TextView
                android:id="@+id/textView3"
                style="@style/CodeFont"
                android:layout_weight="1"
                android:text="@string/prompt_password"
                android:textSize="24sp" />


            <EditText
                android:id="@+id/passwordRegistro"
                style="@style/CodeFont"
                android:ems="10"
                android:hint="@string/prompt_password"
                android:imeActionId="6"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true"

                />


            <!-- PASSWORD CONFIRMATION-->
            <TextView
                android:id="@+id/labelPassConfirmation"
                style="@style/CodeFont"
                android:text="@string/prompt_password_confirmation"
                android:textSize="24sp" />




                <EditText
                    android:id="@+id/passwordConfirmationRegistro"
                    style="@style/CodeFont"
                    android:imeActionId="6"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:hint="@string/prompt_password_confirmation"
                    />




            <!-- INTERESES-->
            <TextView
                android:id="@+id/labelInteres"
                style="@style/CodeFont"
                android:text="@string/intereses"
                android:textSize="24sp" />


                <Button
                    android:id="@+id/botonInteresRegistro"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="23dp"
                    android:background="@color/colorPrimary"
                    android:text="@string/selecciona"
                    />

            <!-- BOTON REGISTRO-->


            <Button
                android:id="@+id/registroPost"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:ems="10"
                android:layout_weight="1"
                android:background="@color/colorPrimaryDark"
                android:text="@string/action_register"
                android:textStyle="bold"

                />

        </LinearLayout>
    </ScrollView>

</LinearLayout>
