<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".actividades.fragments.ModificaUsuarioFragment">
    <ScrollView
        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:background="@color/colorAccent">


        <LinearLayout
            android:id="@+id/titulo_form"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:layout_margin="@dimen/fab_margin"
            android:layout_marginTop="20px"
            android:orientation="vertical"

            >


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/PerfilTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/action_settings"
                    android:textColor="@color/black"
                    android:textSize="30sp" />


            </RelativeLayout>

            <ImageView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimaryDark"
                android:paddingBottom="1dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:paddingTop="1dp"
                android:src="@android:drawable/divider_horizontal_dark" />



            <LinearLayout

                android:id="@+id/registro_login_form"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:orientation="vertical">

                <!-- NOMBRE-->

                <TextView
                    android:id="@+id/NombreLabel"
                    style="@style/CodeFont"
                    android:layout_marginTop="10sp"
                    android:text="@string/nombre" />

                <AutoCompleteTextView
                    android:id="@+id/nombreModifica"
                    style="@style/CodeFont"
                    android:layout_width="match_parent"
                    android:layout_marginBottom="10sp"
                    android:hint="@string/nombre"
                    android:inputType="textAutoComplete"

                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColorLink="@color/colorPrimary" />


                <!-- FECHA NACIMIENTO-->
                <TextView
                    android:id="@+id/FechaLabel"
                    style="@style/CodeFont"
                    android:layout_marginBottom="0dp"
                    android:text="@string/fechaNacimiento" />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/fechaNacimientoModificar"
                        style="@style/CodeFont"
                        android:layout_width="325dp"
                        android:layout_weight="1"
                        android:ems="10"
                        android:hint="@string/formato_fecha"
                        android:inputType="date"
                        android:textColorLink="@color/colorPrimary"
                        app:layout_constraintLeft_toLeftOf="parent" />

                    <android.support.constraint.ConstraintLayout

                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1">


                        <ImageButton
                            android:id="@+id/ib_obtener_fecha"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="52dp"
                            android:backgroundTint="@color/colorPrimary"
                            android:src="@drawable/ic_date_range_black_24dp"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintLeft_toRightOf="@+id/fechaNacimientoRegistro"
                            tools:ignore="ContentDescription"
                            tools:layout_editor_absoluteY="0dp" />


                    </android.support.constraint.ConstraintLayout>
                </LinearLayout>



                <!-- INTERESES-->

                <TextView
                    android:id="@+id/labelIntereses"
                    style="@style/CodeFont"
                    android:layout_marginBottom="3sp"
                    android:layout_marginTop="10sp"
                    android:text="@string/intereses" />

                <Button
                    android:id="@+id/botonInteresModificar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="13dp"
                    android:background="@color/colorPrimary"
                    android:paddingLeft="10sp"
                    android:paddingRight="10sp"
                    android:text="@string/selecciona" />


                <TextView
                    android:id="@+id/labelDescripcion"
                    style="@style/CodeFont"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5sp"
                    android:layout_marginTop="10sp"
                    android:text="@string/descripcion" />


                <EditText
                    android:id="@+id/descripcionPerfilModificar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="80px"
                    android:background="@android:color/background_light"

                    android:gravity="top"
                    android:maxLines="12"
                    android:padding="5sp"
                    android:scrollbars="vertical"
                    android:inputType="textMultiLine"
                    android:text=""
                    android:textAlignment="viewStart"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="?attr/colorBackgroundFloating"
                    android:textSize="16sp" />

                <!-- BOTON REGISTRO-->
                <Button
                    android:id="@+id/botonModificarUsuarioPost"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="50px"
                    android:layout_marginTop="16dp"
                    android:layout_weight="1"
                    android:background="@color/colorPrimaryDark"
                    android:ems="10"

                    android:text="@string/action_save"
                    android:textStyle="bold" />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>


</FrameLayout>